# cobot-cli

./: .coverage  .gitignore  CoBot-Cli.md  README.md  pyproject.toml  pytest.ini  settings.example.toml  settings.toml
src/cobot_cli/: __init__.py  cli.py  history.py  settings.py
src/motionlabbot/: cli.py
tests/: test_cli.py  test_history.py
